--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost/springit?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=FALSE
 
 spring.datasource.username=root
-spring.datasource.password=@S2a0s0h2
+spring.datasource.password=*********
 management.endpoints.web.exposure.include=*
 
 #***************
